--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,10 @@ body {
     border-radius: 10px;
     color: rgb(255, 255, 255);
 }
-.book button :hover{
-    background-color: rgb(184, 184, 184);
+.book button:hover{
+    background-color: rgb(255, 255, 255);
+    color: black;
+    padding: 7px;
+    border: 1px solid rgb(148, 148, 148);
     
 }
